--- a/src/components/08-useReducer/styles.css
+++ b/src/components/08-useReducer/styles.css
@@ -1,3 +1,14 @@
 body{
     padding: 50px;
 }
+p{
+    margin:0px;
+}
+.list-group-item{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.complete{
+    text-decoration: line-through;
+}
